# modular-bna

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
compare-results/23184/: compare-arcata-california.csv  compare-cañon city-colorado.csv  compare-chambéry-savoie.csv  compare-crested butte-colorado.csv  compare-orange-new south wales.csv  compare-provincetown-massachusetts.csv  compare-rehoboth beach-delaware.csv  compare-santa rosa-new mexico.csv  compare-st. louis park-minnesota.csv
compare-results/23198.1/: compare-arcata-california.csv  compare-cañon city-colorado.csv  compare-crested butte-colorado.csv  compare-flagstaff-arizona.csv  compare-rehoboth beach-delaware.csv  compare-st. louis park-minnesota.csv  compare-valencia-valencia.csv
compare-results/23201/: compare-orange-new south wales.csv  compare-provincetown-massachusetts.csv  compare-santa rosa-new mexico.csv  compare-st. louis park-minnesota.csv
compare-results/23203/: compare-alvarado-texas.csv  compare-ancienne-lorette-québec.csv  compare-arcata-california.csv  compare-chambéry-savoie.csv  compare-flagstaff-arizona.csv  compare-jackson-wyoming.csv  compare-port townsend-washington.csv  compare-provincetown-massachusetts.csv  compare-rehoboth beach-delaware.csv  compare-st. louis park-minnesota.csv  compare-valencia-valencia.csv
config/: servers.json
imports/jobs/: create_table.sql  import_jobs.sh
modular_bna/: bna.py  cli.py
modular_bna/core/: bna.py  utm.py
scripts/: 00-entrypoint.sh  01-better_setup_database.sh  01-setup_database.sh  10-run_analysis.sh  11-detect_utm_zone.py  20-import.sh  21-import_neighborhood.sh  22-import_jobs.sh  23-import_osm.sh  30-compute-features.sh  31-compute-stress.sh  32-compute-run-connectivity.sh  40-export-export_connectivity.sh
sql/: clip_osm.sql
sql/connectivity/: access_colleges.sql  access_community_centers.sql  access_dentists.sql  access_doctors.sql  access_hospitals.sql  access_jobs.sql  access_overall.sql  access_parks.sql  access_pharmacies.sql  access_population.sql  access_retail.sql  access_schools.sql  access_social_services.sql  access_supermarkets.sql  access_trails.sql  access_transit.sql  access_universities.sql  census_block_jobs.sql  connected_census_blocks.sql  overall_scores.sql  reachable_roads_high_stress_cleanup.sql  reachable_roads_low_stress_cleanup.sql
sql/features/: bike_infra.sql  functional_class.sql  island.sql  lanes.sql  park.sql  rrfb.sql  signalized.sql  stops.sql
sql/features/streetlight/: streetlight_destinations.sql
sql/stress/: stress_lesser_ints.sql  stress_motorway-trunk_ints.sql  stress_primary_ints.sql  stress_secondary_ints.sql  stress_segments_higher_order.sql  stress_segments_lower_order.sql  stress_segments_lower_order_res.sql  stress_tertiary_ints.sql
tests/: test_compare.py
tests/scripts/: flagstaff-arizona.sh  pg_isready.sh  provincetown-massachusetts.sh  run-analysis.sh  valencia-valencia.sh
