[tool.poetry]
name = "bna"
version = "0.1.0"
description = ""
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^2.1.1"
black = "^23.3.0"
ruff = "^0.0.270"
isort = "^5.12.0"
brokenspoke-analyzer = {git = "https://github.com/PeopleForBikes/brokenspoke-analyzer", rev = "1.2.1"}
pytest-asyncio = "^0.21.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.core]
dialect = "postgres"
large_file_skip_byte_limit = 40000

[tool.isort]
profile = "black"
force_grid_wrap = 2
