[tool.poetry]
name = "bna"
version = "0.1.0"
description = ""
authors = ["Rémy Greinhofer <remy.greinhofer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^2.1.1"
black = "^23.3.0"
ruff = "^0.0.270"
isort = "^5.12.0"
brokenspoke-analyzer = {git = "https://github.com/PeopleForBikes/brokenspoke-analyzer", rev = "main"}
pytest-asyncio = "^0.21.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.2"
ipykernel = "^6.23.2"
pytest-rerunfailures = "^11.1.2"
pip = "^23.1.2"
install = "^1.3.5"
pytest-reporter-html1 = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.core]
dialect = "postgres"
large_file_skip_byte_limit = 40000

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-p no:warnings --reruns 5 --reruns-delay 15 --template=html1/index.html --report=report.html"
markers = [
    "usa",
]
